# corryvreckan-simons-fun-zone

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.ci/: init_x86_64.sh
.gitlab/ci/: codespell_ignored_words.txt
.reuse/: dep5
cmake/: CPackConfig.cmake  FindEUDAQ1.cmake  FindMUPIX8DAQ.cmake  clang-cpp-checks.cmake  compiler-flag-checks.cmake  corryvreckan.cmake  setup.cmake.sh  tools.cmake
doc/usermanual/chapters/: configuration.tex  development.tex  eventbuilding.tex  howtoalign.tex
etc/: README.md  addModule.sh  setup_lxplus.sh
etc/docker/: Dockerfile  Dockerfile.deps
etc/git-hooks/: install-hooks.sh  pre-commit-clang-format-hook  pre-commit-hook  pre-push-hook  pre-push-tag-version-hook
jobsub/: README.md  _options.csv  jobsub.py  loader.py  misc.py  runner.py
src/core/: CMakeLists.txt  Corryvreckan.cpp  Corryvreckan.hpp
src/core/clipboard/: Clipboard.cpp  Clipboard.hpp  Clipboard.tpp  exceptions.h
src/core/config/: ConfigManager.cpp  ConfigManager.hpp  ConfigReader.cpp  ConfigReader.hpp  Configuration.cpp  Configuration.hpp  Configuration.tpp  OptionParser.cpp  OptionParser.hpp  exceptions.cpp  exceptions.h
src/core/detector/: BigPixelDetector.cpp  BigPixelDetector.hpp  Detector.cpp  Detector.hpp  HexagonalPixelDetector.cpp  HexagonalPixelDetector.hpp  PixelDetector.cpp  PixelDetector.hpp  PixelModuleDetector.cpp  PixelModuleDetector.hpp  PolarDetector.cpp  PolarDetector.hpp  exceptions.cpp  exceptions.h
src/core/module/: Module.cpp  Module.hpp  ModuleIdentifier.hpp  ModuleManager.cpp  ModuleManager.hpp  dynamic_module_impl.cpp  exceptions.h
src/core/utils/: ROOT.h  ThreadPool.cpp  exceptions.h  log.cpp  log.h  text.cpp  text.h  text.tpp  type.h  unit.cpp  unit.h  unit.tpp
src/exec/: CMakeLists.txt  corry.cpp
src/modules/: CMakeLists.txt
src/modules/AhcalTextWriter/: AhcalTextWriter.cpp  AhcalTextWriter.h  CMakeLists.txt  README.md
src/modules/AlignmentDUTResidual/: AlignmentDUTResidual.cpp  AlignmentDUTResidual.h  CMakeLists.txt  README.md
src/modules/AlignmentMillepede/: AlignmentMillepede.cpp  AlignmentMillepede.h  CMakeLists.txt  README.md
src/modules/AlignmentTime/: AlignmentTime.cpp  AlignmentTime.h  CMakeLists.txt  README.md
src/modules/AlignmentTrackChi2/: AlignmentTrackChi2.cpp  AlignmentTrackChi2.h  CMakeLists.txt  README.md
src/modules/AnalysisDUT/: AnalysisDUT.cpp  AnalysisDUT.h  CMakeLists.txt  README.md
src/modules/AnalysisEfficiency/: AnalysisEfficiency.cpp  AnalysisEfficiency.h  CMakeLists.txt  README.md
src/modules/AnalysisFASTPIX/: AnalysisFASTPIX.cpp  AnalysisFASTPIX.h  CMakeLists.txt  README.md
src/modules/AnalysisMaterialBudget/: AnalysisMaterialBudget.cpp  AnalysisMaterialBudget.h  CMakeLists.txt  README.md
src/modules/AnalysisParticleFlux/: AnalysisParticleFlux.cpp  AnalysisParticleFlux.h  CMakeLists.txt  README.md
src/modules/AnalysisPowerPulsing/: AnalysisPowerPulsing.cpp  AnalysisPowerPulsing.h  CMakeLists.txt  README.md
src/modules/AnalysisSensorEdge/: AnalysisSensorEdge.cpp  AnalysisSensorEdge.h  CMakeLists.txt  README.md
src/modules/AnalysisTelescope/: AnalysisTelescope.cpp  AnalysisTelescope.h  CMakeLists.txt  README.md
src/modules/AnalysisTiming/: AnalysisTiming.cpp  AnalysisTiming.h  CMakeLists.txt  README.md
src/modules/AnalysisTimingATLASpix/: AnalysisTimingATLASpix.cpp  AnalysisTimingATLASpix.h  CMakeLists.txt  README.md
src/modules/AnalysisTimingFASTPIX/: AnalysisTimingFASTPIX.cpp  AnalysisTimingFASTPIX.h  CMakeLists.txt  README.md
src/modules/AnalysisTrackIntercept/: AnalysisTrackIntercept.cpp  AnalysisTrackIntercept.h  CMakeLists.txt  README.md
src/modules/AnalysisTracks/: AnalysisTracks.cpp  AnalysisTracks.h  CMakeLists.txt  README.md
src/modules/Clustering4D/: CMakeLists.txt  Clustering4D.cpp  Clustering4D.h  README.md
src/modules/ClusteringAnalog/: CMakeLists.txt  ClusteringAnalog.cpp  ClusteringAnalog.h  README.md
src/modules/ClusteringSeed/: CMakeLists.txt  ClusteringSeed.cpp  ClusteringSeed.h  README.md
src/modules/ClusteringSpatial/: CMakeLists.txt  ClusteringSpatial.cpp  ClusteringSpatial.h  README.md
src/modules/Correlations/: CMakeLists.txt  Correlations.cpp  (+2 more)
src/modules/EventLoaderALiBaVa/: CMakeLists.txt  CMakeLists.txt.save  EventLoaderALiBaVa.cpp  EventLoaderALiBaVa.h  README.md
src/modules/EventLoaderALiBaVa/ALiBaVa/: AsciiRoot.cpp  AsciiRoot.h  ChanList.cpp  ChanList.h  Data.h  DataFileRoot.cpp  DataFileRoot.h  HDFRoot.cpp  HDFRoot.h  Hit.cpp  Hit.h  Tracer.cpp  auxfunctions.cpp  auxfunctions.h  auxfunctions_old.cpp  auxfunctions_old2.cpp.old  auxfunctions_old3.cpp.old  auxfunctions_old4.cpp.old  auxfunctions_old5.cpp.old  utils.cpp  utils.h
src/modules/FileReader/: CMakeLists.txt  FileReader.cpp  FileReader.h  README.md
src/modules/OnlineMonitor/: CMakeLists.txt  GuiDisplay.hpp  Linkdef.h  OnlineMonitor.cpp  OnlineMonitor.h  README.md
src/objects/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Event.cpp  Event.hpp  GblTrack.cpp  GblTrack.hpp  Linkdef.h  MCParticle.cpp  MCParticle.hpp  Multiplet.cpp  Multiplet.hpp  Object.cpp  Object.hpp  Pixel.cpp  Pixel.hpp  SpidrSignal.hpp  StraightLineTrack.cpp  StraightLineTrack.hpp  Track.cpp  Track.hpp  Waveform.hpp  exceptions.h  objects.h
src/tools/: cuts.h  kdtree.h
testing/: test_align_dut_timepix3tel_dut_atlaspix_ebeam120.conf  test_align_telescope_timepix3tel_dut_atlaspix_ebeam120.conf  test_filtering_timepix3tel_ebeam120.conf  test_io_read_rootobj.conf
testing/geometries/: geometry_mimosa26_telescope.conf  geometry_timepix3_telescope.conf
(+126 files in other folders)
